# cube

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
src/: main.c  math_utils.c  renderer.c  shader.c  window.c
src/include/: math_utils.h  renderer.h  shader.h  window.h
src/renderer/: renderer.c  renderer.h
src/shader/: shader.c
src/utils/math/: math.c  math.h  math_utils.c  math_utils.h
src/utils/math/matrix/: matrix.c  matrix.h
src/utils/objects/: cube.c  cube.h
src/utils/shader/: shader.c  shader.h
src/window/: window.c  window.h
